--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,11 @@
-LOGIN
+<form class="" action="/users/login" method="post">
+    <div class="form-group">
+        <label for="inputUsername">Username</label>
+        <input type="text" class="form-control" name="userName" value="">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="password" class="form-control" name="password" value="">
+    </div>
+    <button type="submit" name="button" class="btn btn-default">Login</button>
+</form>
