--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,3 +1,9 @@
+{{#if errors}}
+    {{#each errors}}
+        <div class="alert alert-danger">{{msg}}</div>
+    {{/each}}
+{{/if}}
+
 <form class="" action="/users/register" method="post">
     <div class="form-group">
         <label for="inputUsername">Username: </label>
@@ -19,7 +25,7 @@
     </div>
     <div class="form-group">
         <label for="inputPasswordAgain">Password again: </label>
-        <input type="password" class="form-control" name="passwordAgain" value="">
+        <input type="password" class="form-control" name="password2" value="">
     </div>
     <button type="submit" name="button" class="btn btn-default">Register</button>
 </form>
