added passport config, login works, doing logout

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -37,7 +37,7 @@
                     <div class="alert alert-danger">{{error_msg}}</div>
                 {{/if}}
                 {{#if error}}
-                    <div class="alert alert-danger">{{error}}</div>
+                    <div class="alert alert-success">{{error}}</div>
                 {{/if}}
             </div>
 
@@ -51,6 +51,7 @@
                 <p>&copy; 2017 lngka, Inc.</p>
             </footer>
         </div> <!-- /container -->
+        <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="/js/bootstrap.js"></script>
     </body>
 </html>
